add login and register UI with authme support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ depend:
   - VectorDisplays
   - packetevents
 softdepend:
-  - PlaceholderAPI
+  - AuthMe
 authors: [ MrXiaoM ]
 folia-supported: true
 commands:
